carousel resizing, add text to home add spaces

--- a/index.html
+++ b/index.html
@@ -66,7 +66,29 @@
 </div>
 <div class="Home" id="Home">
   <h1>Home</h1>
-    <a>新宿　はじめまして</a>
+    <a>パーティー向けのレンタルスペースは GOOD SPACEにおまかせ！</a><br>
+    <a>2〜8名までの集まりの場に最適！</a><br>
+    <a>華やかな内装でご利用者様にご満足頂いております。</a><br>
+    <a>パーティー・デート・女子会・撮影会・着替え場所・オフサイトミーティングなど、利用用途は様々です！</a><br>
+    <a>調理器具・ボードゲーム等多数の備品をご用意♪</a><br>
+    <a>スペース内に監視カメラはございません。完全プライベート空間をお楽しみ下さい♪</a><br>
+</div>
+<div class="Spaces" id="Spaces">
+  <h1>Spaces</h1>
+  <div class="grid-spaces">
+    <div class="space1-desc">space1</div>
+    <img class="space1-img" alt="Theater新宿"></img>
+    <img class="space2-img" alt="Lily立川"></img>
+    <div class="space2-desc">space2</div>
+    <div class="space3-desc">space3</div>
+    <img class="space3-img" alt="Lily立川2号店"></img>
+    <img class="space4-img"alt="Olive立川"></img>
+    <div class="space4-desc">space4</div>
+    <div class="space5-desc">space5</div>
+    <img class="space5-img"alt="スカイスタジオ立川"></img>
+    <img class="space6-img"alt="Sweet登戸"></img>
+    <div class="space6-desc">space6</div>      
+  </div>
 </div>
 <div class="Reserve">
   <a class="reserve link" href='https://upnow.jp/goodspace' target='_blank'>Reserve</a>
