add logo to navbar, grid setup with image

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <!-- Navbar -->
 <nav>
   <ul class="menu">
+    <img src="images/CuteDonut.png" alt="logo" class="logo-image" />
     <a class="logo" href="">GOOD SPACE</a>
     <li class="item" id="home"><a href="#Home">HOME</a></li>
     <li class="item" id="blog"><a href="#Blog">BLOG</a></li>
@@ -74,21 +75,35 @@
     <a>スペース内に監視カメラはございません。完全プライベート空間をお楽しみ下さい♪</a><br>
 </div>
 <div class="Spaces" id="Spaces">
-  <h1>Spaces</h1>
-  <div class="grid-spaces">
-    <div class="space1-desc">space1</div>
-    <img class="space1-img" alt="Theater新宿"></img>
-    <img class="space2-img" alt="Lily立川"></img>
-    <div class="space2-desc">space2</div>
-    <div class="space3-desc">space3</div>
-    <img class="space3-img" alt="Lily立川2号店"></img>
-    <img class="space4-img"alt="Olive立川"></img>
-    <div class="space4-desc">space4</div>
-    <div class="space5-desc">space5</div>
-    <img class="space5-img"alt="スカイスタジオ立川"></img>
-    <img class="space6-img"alt="Sweet登戸"></img>
-    <div class="space6-desc">space6</div>      
-  </div>
+  <section>
+    <h2>Spaces</h2>
+    <div class="grid-spaces">
+      <div class="space-tiles">
+        <div class="space-desc">space1</div>
+        <img class="space-img" src="images/Spaces_Theater_Shinjuku.jpg" alt="Theater新宿"></img>
+      </div>
+      <div class="space-tiles">
+        <img class="space-img" src="images/Spaces_Lily_Tachikawa.jpg" alt="Lily立川"></img>
+        <div class="space-desc">space2</div>
+      </div>
+      <div class="space-tiles">
+        <div class="space-desc">space3</div>
+        <img class="space-img" src="images/Spaces_Lily_Tachikawa2.jpg" alt="Theater新宿"></img>
+      </div>
+      <div class="space-tiles">
+        <img class="space-img" src="images/Spaces_Olive_Tachikawa.jpg" alt="Lily立川"></img>
+        <div class="space-desc">space4</div>
+      </div>
+      <div class="space-tiles">
+        <div class="space-desc">space5</div>
+        <img class="space-img" src="images/Spaces_Skystudio_Tachikawa.jpg" alt="Theater新宿"></img>
+      </div>
+      <div class="space-tiles">
+        <img class="space-img" src="images/Spaces_Sweet_Noborito.jpg" alt="Lily立川"></img>
+        <div class="space-desc">space6</div>
+      </div>        
+    </div>
+  </section>
 </div>
 <div class="Reserve">
   <a class="reserve link" href='https://upnow.jp/goodspace' target='_blank'>Reserve</a>
