--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Good Space</title>
+<title Good Space></title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
@@ -32,6 +32,30 @@
     <li class="toggle" id="toggle"><a><i class="fas fa-bars"></i></a></li>
   </ul>
 </nav>
+<main>
+  <aside>
+    <ul>
+      <li>
+        <a class="indicator active" href="#first"></a>
+      </li>
+      <li>
+        <a class="indicator" href="#second"></a>
+      </li>
+      <li>
+        <a class="indicator" href="#third"></a>
+      </li>
+    </ul>
+  </aside>
+  <section id="first" class="first">
+    <h1>  Rental Space<br />Good Space  </h1>
+  </section>
+  <section id="second">
+    <h1>How are you?</h1>
+  </section>
+  <section id="third">
+    <h1>Goodbye!</h1>
+  </section>
+</main>
 <div class="carousel-container">
 <!-- Flickity HTML init -->
   <div class="carousel js-flickity" data-flickity-options='{ "wrapAround": true, "pageDots":true}'>
@@ -67,12 +91,7 @@
 </div>
 <div class="Home" id="Home">
   <h1>Home</h1>
-    <a>パーティー向けのレンタルスペースは GOOD SPACEにおまかせ！</a><br>
-    <a>2〜8名までの集まりの場に最適！</a><br>
-    <a>華やかな内装でご利用者様にご満足頂いております。</a><br>
-    <a>パーティー・デート・女子会・撮影会・着替え場所・オフサイトミーティングなど、利用用途は様々です！</a><br>
-    <a>調理器具・ボードゲーム等多数の備品をご用意♪</a><br>
-    <a>スペース内に監視カメラはございません。完全プライベート空間をお楽しみ下さい♪</a><br>
+  <p>Rental Space<br />Good Space</p>
 </div>
 <div class="Spaces" id="Spaces">
   <section>
