no more flickity, spaces moved

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <img src="images/CuteDonut.png" alt="logo" class="logo-image" />
     <a class="logo" href="">GOOD SPACE</a>
     <li class="item" id="home"><a href="#Home">HOME</a></li>
+    <li class="item" id="spaces"><a href="#Spaces">SPACES</a></li>
     <li class="item" id="blog"><a href="#Blog">BLOG</a></li>
     <li class="item" id="aboutMe"><a href="#About Me">ABOUT ME</a></li>
     <li class="item" id="contact"><a href="#Contact">CONTACT</a></li>
@@ -36,66 +37,20 @@
   <aside>
     <ul>
       <li>
-        <a class="indicator active" href="#first"></a>
+        <a class="indicator active" href="#Home"></a>
       </li>
       <li>
-        <a class="indicator" href="#second"></a>
+        <a class="indicator" href="#Spaces"></a>
       </li>
       <li>
         <a class="indicator" href="#third"></a>
       </li>
     </ul>
   </aside>
-  <section id="first" class="first">
-    <h1>  Rental Space<br />Good Space  </h1>
+  <section id="Home" class="Home">
+    <h1>  Rental Space<br />#Good Space  </h1>
   </section>
-  <section id="second">
-    <h1>How are you?</h1>
-  </section>
-  <section id="third">
-    <h1>Goodbye!</h1>
-  </section>
-</main>
-<div class="carousel-container">
-<!-- Flickity HTML init -->
-  <div class="carousel js-flickity" data-flickity-options='{ "wrapAround": true, "pageDots":true}'>
-    <!-- images from unsplash.com -->
-    <div class="carousel-cell">
-      <img src="images/32838816_Unknown.jpg" alt="fruits" />
-    </div>
-    <div class="carousel-cell">
-      <img src="images/32839088_Unknown.jpg" alt="submerged" />
-    </div>
-    <div class="carousel-cell">
-      <img src="images/32839152_Unknown.jpg" alt="look-out" />
-    </div>
-    <div class="carousel-cell">
-      <img src="images/32839184_Unknown.jpg" alt="One World Trade" />
-    </div>
-    <div class="carousel-cell">
-      <img src="images/32839376_Unknown.jpg" alt="drizzle" />
-    </div>
-    <div class="carousel-cell">
-      <img src="images/32839936_Unknown.jpg" alt="cat nose" />
-    </div>
-    <div class="carousel-cell">
-      <img src="images/IMG_8014.JPG" alt="contrail" />
-    </div>
-    <div class="carousel-cell">
-      <img src="images/IMG_8019.JPG" alt="golden hour" />
-    </div>
-    <div class="carousel-cell">
-      <img src="images/IMG_8023.JPG" alt="flight formation" />
-    </div>
-  </div>
-</div>
-<div class="Home" id="Home">
-  <h1>Home</h1>
-  <p>Rental Space<br />Good Space</p>
-</div>
-<div class="Spaces" id="Spaces">
-  <section>
-    <h2>Spaces</h2>
+  <section id="Spaces" class="Spaces">
     <div class="grid-spaces">
       <div class="space-tiles">
         <div class="space-desc">space1</div>
@@ -120,13 +75,17 @@
       <div class="space-tiles">
         <img class="space-img" src="images/Spaces_Sweet_Noborito.jpg" alt="Lily立川"></img>
         <div class="space-desc">space6</div>
-      </div>        
+      </div>       
+      <div class="Reserve">
+        <a class="reserve link" href='https://upnow.jp/goodspace' target='_blank'>Reserve</a>
+      </div> 
     </div>
   </section>
-</div>
-<div class="Reserve">
-  <a class="reserve link" href='https://upnow.jp/goodspace' target='_blank'>Reserve</a>
-</div>
+  <section id="third">
+    <h1>Goodbye!</h1>
+  </section>
+</main>
+
 <div class="Blog" id="Blog">
   <h1>Blog</h1>
   <div class="grid-container">
